feature: New class lobby

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,3 +1,6 @@
 /* scss/_variables.scss */
 $primary-color: #6c63ff;
 $secondary-color: #aaaaaa;
+$third-color: #FF6963;
+$background-color-private: #D9E1FF;
+$background-color-public: #FFD8D6;
