fix: datetime picker color

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,4 +3,5 @@ $primary-color: #6c63ff;
 $secondary-color: #aaaaaa;
 $third-color: #FF6963;
 $background-color-private: #D9E1FF;
+$calendar-color: rgba(107, 99, 255, 0.589);
 $background-color-public: #FFD8D6;
