feature: User profile and update user

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,7 @@
 /* scss/_variables.scss */
 $primary-color: #6c63ff;
+$title-text-color: #464850;
+$subtitle-text-color: #797D8B;
 $secondary-color: #aaaaaa;
 $third-color: #FF6963;
 $background-color-private: #D9E1FF;
